--- a/introduce.html
+++ b/introduce.html
@@ -16,9 +16,9 @@
         <h5>좋아하는 것</h5>
         <ul>
             <li>파이썬</li>
-            <img src="./beer.jpg" alt="개발사진"/>
+            <img src="./dogfoot.jpg" alt="개발사진"/>
             <li>코드짜기</li>
-            <img src="./river.jpg" alt="알고리즘사진"/>
+            <img src="./algo.jpg" alt="알고리즘사진"/>
 
         </ul>
         <h3>sns: <a href="https://github.com/choi-joonbeom"> github 바로가기 </a> </h3>
