--- a/introduce.html
+++ b/introduce.html
@@ -12,7 +12,7 @@
         <!-- alt + shift + 방향키 밑으로 : 바로복붙 -->
         
         <h3>자기소개</h3>
-        <div>안녕하세요. 최준범입니다.</div>
+        <div>안녕하세요. 최준범입니다</div>
         <h5>좋아하는 것</h5>
         <ul>
             <li>파이썬</li>
